# bevy07_tut

bevy07_tutorial/: Cargo.toml
bevy07_tutorial/src/: components.rs  enemy.rs  main.rs  player.rs
iosmetric_2d_rpg/: Cargo.toml
iosmetric_2d_rpg/assets/isometric_mini_crusader/attack/: crusader_attack_00000.png.import  crusader_attack_00001.png.import  crusader_attack_00002.png.import  crusader_attack_00003.png.import  crusader_attack_00004.png.import  crusader_attack_00005.png.import  crusader_attack_00006.png.import  crusader_attack_00007.png.import  crusader_attack_00008.png.import  crusader_attack_00009.png.import  crusader_attack_00010.png.import  crusader_attack_00011.png.import  (+132 more)
iosmetric_2d_rpg/src/: main.rs
learn_bevy/src/: breakout_game_example.rs  gltf_load_example.rs  main.rs  orthographic_example.rs  orthographic_with_movement_example.rs
learn_bevy/src/rhythm_game_example/: mod.rs
learn_bevy/src/snake_clone_example/: mod.rs
learn_wgpu/: Cargo.toml
learn_wgpu/src/: main.rs
rust_in_action/src/: int_vs_int.rs
rust_opengl/: Cargo.toml  build.rs
rust_opengl/resources/shaders/: 6.1.coordinate_systems_fs.glsl  6.1.coordinate_systems_vs.glsl  fragment_with_color.glsl  fragment_with_texture.glsl  vertex_with_color.glsl
rust_opengl/src/: ecs_experiments.rs  examples.rs  file_utils.rs  main.rs  shader.rs  tests.rs  texture.rs  utils.rs
warp_examples/: docker-compose.yml  env_settings.env  readme.md
warp_examples/migrations/: todos.sql
warp_examples/src/: filters.rs  handlers.rs  main.rs  migrations.rs  models.rs  tests.rs
(+1777 files in other folders)
