[package]
name = "rust_opengl"
version = "0.1.0"
authors = ["Parvu Eduard <parvueduard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.26.0"
image = "0.23.13"
#nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
stb_image = "0.2.3"

[build-dependencies]
gl_generator = "0.14.0"
